src/k8s/platform/services/zitadel/middleware-https-redirect.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: zitadel-https-redirect
spec:
  redirectScheme:
    scheme: https
    permanent: true
