src/k8s/platform/services/zitadel/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zitadel
  annotations:
    traefik.ingress.kubernetes.io/router.middlewares: zitadel-zitadel-https-redirect@kubernetescrd
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - id.sgf.dev
      secretName: zitadel-tls
  rules:
    - host: id.sgf.dev
      http:
        paths:
          - path: /ui/v2/login
            pathType: Prefix
            backend:
              service:
                name: zitadel-login
                port:
                  number: 3000
          - path: /
            pathType: Prefix
            backend:
              service:
                name: zitadel
                port:
                  number: 8080
